MB-50456 : Wrap timer lcb handle in early bailout wrapper

Problem:

Under scenarios like encryption level changing from
plain text to tls only all timer scan operations as well as
set / delete timer ops will keep failing with a constant retry loop
This is all while holding the timer store lock, which will significantly
delay (possibly by hours in some scenarios) further handler-wide operations.

Wrap the lcb instance handle (currently only for timer handles) in a bailout mechanism.
This will kick in as soon as cpp consumer receives encryption change
notification from plain text to tls only.

Change-Id: I42d7f9fdaa79b95039280086ae44d901777231bb
Reviewed-on: https://review.couchbase.org/c/eventing/+/168529
Tested-by: <abhishek.jindal@couchbase.com>
Reviewed-by: Jeelan Basha Poola <jeelan.poola@couchbase.com>
Reviewed-by: CI Bot