v8_consumer/src/client.cc
@@ -13,6 +13,7 @@
 #include <string>
 #include <thread>
 
+#include "lcb_utils.h"
 #include "breakpad.h"
 #include "bucket_cache.h"
 #include "client.h"
@@ -772,6 +773,7 @@ void AppWorker::RouteMessageWithResponse(
   case ePauseConsumer: {
     pause_consumer_.store(true);
     std::unordered_map<int64_t, uint64_t> lps_map;
+    LOG(logInfo) << "Received pause event from Go" << std::endl;
     for (int16_t idx = 0; idx < thr_count_; ++idx) {
       auto worker = workers_[idx];
       auto lck = worker->GetAndLockBucketOpsLock();
@@ -784,6 +786,7 @@ void AppWorker::RouteMessageWithResponse(
         lps_map[vb] = lps;
       }
     }
+    LOG(logInfo) << "Pause event processing complete. Sending ack" << std::endl;
     SendPauseAck(lps_map);
   } break;
   case eApp_Worker_Setting:
